--- a/sales-management-app/src/main/java/com/icodeuplay/sales/management/app/login/Login.fxml
+++ b/sales-management-app/src/main/java/com/icodeuplay/sales/management/app/login/Login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.icodeuplay.sales.management.client.login.LoginController">
+<AnchorPane prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.icodeuplay.sales.management.app.login.LoginController">
    <children>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="84.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="15.0">
          <image>
